# linkedin-cli

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.artifacts/bench-5k-dataset/: test.jsonl  train.jsonl  val.jsonl
.artifacts/content-index-export/: semantic-fastembed-baai-bge-small-en-v1.5.jsonl
.artifacts/curated-holdouts-smoke/: test.jsonl  train.jsonl  val.jsonl
.artifacts/curated-pref-smoke/: test.jsonl  train.jsonl
.artifacts/curated-sft-smoke/: test.jsonl  train.jsonl  val.jsonl
.artifacts/local-dataset-smoke/: test.jsonl  train.jsonl
.artifacts/qwen/smoke-ai-workflow/: test.jsonl  train.jsonl  val.jsonl
.artifacts/targets/: eng_ops_ai.json  gtm_ops.json  healthcare_ops.json
.artifacts/training/: slice-ai-agents.json  slice-ai-automation.json  slice-ai-b2b.json  slice-ai-enterprise.json  slice-ai-growth.json  slice-ai-infrastructure.json  slice-ai-workflow.json  slice-cloud-agents.json  slice-cloud-automation.json  slice-cloud-b2b.json  slice-cloud-enterprise.json  slice-cloud-growth.json  slice-cloud-infrastructure.json  slice-cloud-workflow.json  slice-cybersecurity-agents.json  slice-cybersecurity-automation.json  slice-cybersecurity-b2b.json  slice-cybersecurity-enterprise.json  slice-cybersecurity-growth.json  slice-cybersecurity-infrastructure.json  slice-cybersecurity-workflow.json  slice-data-agents.json  slice-data-automation.json  slice-data-b2b.json  slice-data-enterprise.json  slice-data-growth.json  slice-data-infrastructure.json  slice-data-workflow.json  slice-devtools-agents.json  slice-devtools-automation.json  slice-devtools-b2b.json  slice-devtools-enterprise.json  slice-devtools-growth.json  slice-devtools-infrastructure.json  slice-devtools-workflow.json  slice-fintech-agents.json  slice-fintech-automation.json  slice-fintech-b2b.json  slice-fintech-enterprise.json  slice-fintech-growth.json  (+47 more)
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: architecture.md  distribution.md  linkedin-sandbox.md  mcp.md
docs/architecture/: autonomous-content-runtime.md  stacked-content-ranking.md
docs/plans/: 2026-03-21-discovery-feedback-loop-phase2.md  2026-03-21-discovery-queue-implementation.md  2026-03-21-foundation-upgrades-implementation.md  2026-03-21-packaging-distribution.md  2026-03-26-content-scale-up.md  2026-03-26-growth-agent-v2.md  2026-03-26-local-warehouse.md  2026-03-27-autonomous-content-qwen.md  2026-03-27-stacked-content-ranking.md
linkedin_cli/: __init__.py  __main__.py  cli.py  comment.py  config.py  content.py  content_stack.py  content_warehouse.py  corpus_curation.py  discovery.py  evals.py  lead.py  llm_providers.py  mcp_server.py  modeling.py  output.py  policy.py  qwen_training.py  replay_env.py  retrieval_index.py  runtime_contract.py  sandbox.py  search.py  session.py  traces.py  tui.py  voyager.py  workflow.py
linkedin_cli/integrations/: __init__.py  dm_poller.py
linkedin_cli/write/: __init__.py  executor.py  guards.py  plans.py  reconcile.py  scheduler.py  store.py
packaging/homebrew/: linkedin-discovery-cli.rb
scripts/: bootstrap_searxng.sh  launch_ultrabroad_scrape.py  run_ultrabroad_scrape.py  train_qwen_content.py
tests/: test_actions.py  test_cli_surface.py  test_comment_queue.py  test_content_candidates.py  test_content_harvest.py  test_content_rewards.py  test_content_stacked_ranking.py  test_content_telemetry.py  test_content_warehouse.py  test_corpus_curation.py  test_discover_cli.py  test_discovery.py  test_discovery_analytics.py  test_discovery_identity.py  test_discovery_inbox_feedback.py  test_discovery_ingest.py  test_discovery_learning.py  test_discovery_profile_views.py  test_discovery_public_engagement.py  test_discovery_signals.py  test_dm_poller.py  test_evals.py  test_executor.py  test_lead_autopilot.py  test_lead_pipeline.py  test_linkedin_sandbox.py  test_live_smoke.py  test_llm_providers.py  test_mcp_server.py  test_modeling.py  test_output.py  test_packaging_distribution.py  test_policy.py  test_qwen_harness.py  test_qwen_training.py  test_reconcile.py  test_replay_env.py  test_retrieval_index.py  test_run_ultrabroad_scrape.py  test_runtime_contract.py  (+9 more)
