[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-discovery-cli"
version = "0.1.0"
description = "Unofficial LinkedIn discovery and automation CLI with session-based auth, workflow tooling, and a ranked prospect queue"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = []
keywords = ["linkedin", "cli", "voyager", "automation", "discovery", "prospecting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
]

[project.optional-dependencies]
lxml = ["lxml>=4.9"]
dev = [
    "build>=1.2",
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
linkedin = "linkedin_cli.cli:main"

[project.urls]
Homepage = "https://github.com/codyrobertson/linkedin-cli"
Repository = "https://github.com/codyrobertson/linkedin-cli"
Issues = "https://github.com/codyrobertson/linkedin-cli/issues"
Releases = "https://github.com/codyrobertson/linkedin-cli/releases"

[tool.setuptools.packages.find]
include = ["linkedin_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
